# Chtholly-Borrow

./: .gitignore  CMakeLists.txt  Chtholly.md  DEVELOPMENT_PLAN.md  DesignConcept.md  README.md  build.py  test.cns
include/: Parser.h
include/AST/: ASTNode.h  Declarations.h  Expressions.h  ImportDecl.h  Patterns.h  Statements.h  Types.h
include/Backend/: CodeGenerator.h  Linker.h
include/Lexer/: Lexer.h  Token.h
include/MIR/: MIR.h  MIRBuilder.h
include/Sema/: Sema.h  Substituter.h  SymbolTable.h
src/: Parser.cpp  main.cpp
src/AST/: Types.cpp
src/Backend/: CodeGenerator.cpp  Linker.cpp
src/Lexer/: Lexer.cpp
src/MIR/: MIRBuilder.cpp
src/Sema/: Sema.cpp  SymbolTable.cpp
tests/AST/: ASTNodeTest.cpp  ArrayPointerParserTest.cpp  ClassASTTest.cpp  ControlFlowParserTest.cpp  DeclTest.cpp  EnumParserTest.cpp  ExpressionTest.cpp  GenericsASTTest.cpp  GenericsParserTest.cpp  ImportASTTest.cpp  ImportParserTest.cpp  MemberAccessParserTest.cpp  ParserTest.cpp  StmtTest.cpp  StructASTTest.cpp  StructLiteralParserTest.cpp  StructParserTest.cpp  TypeTest.cpp
tests/Backend/: ArrayPointerNativeTest.cpp  ClassCodeGenTest.cpp  CodeGenTest.cpp  ControlFlowNativeTest.cpp  EnumMatchNativeTest.cpp  EnumNativeTest.cpp  GenericsNativeTest.cpp  MemberAccessCodeGenTest.cpp  NativeTest.cpp  StructNativeTest.cpp  StructTypeTest.cpp
tests/MIR/: ArrayPointerMIRTest.cpp  ControlFlowMIRTest.cpp  EnumMIRTest.cpp  MIRBuilderTest.cpp  MIRCoreTest.cpp  MIRStructTest.cpp  OwnershipMIRTest.cpp
tests/Sema/: ArrayPointerSemaTest.cpp  BuiltinResultTest.cpp  ClassSemaTest.cpp  ControlFlowSemaTest.cpp  EnumSemaTest.cpp  GenericEnumTest.cpp  GenericsSemaTest.cpp  MemberAccessSemaTest.cpp  ModuleLoadingTest.cpp  OwnershipTest.cpp  SemaTest.cpp  StructLiteralSemaTest.cpp  StructSemaTest.cpp  SubstituterTest.cpp  SymbolTableStructTest.cpp  SymbolTableTest.cpp
